--- a/lab02/form_table.html
+++ b/lab02/form_table.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<center>
+<table>
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
  <h3>Form Demo</h3>
  <form method="POST" action="https://angsila.cs.buu.ac.th/~wittawas/632/88726059/lab02/afile.php">
- <label for="name">ชื่อ -นามสกุล:</label><br>
+ <label for="name">ชื่อ -นามสกุล:</label>&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="text" name="name" id="name">
  <br><br>
  <label for="passwd">รหัสผ่าน:</label><br>
@@ -39,5 +39,5 @@
  <input type="reset" value="Clear">
  </form>
 </body>
-</center>
+</table>
 </html>
