lab02/edit Passwd

--- a/lab02/form_table.html
+++ b/lab02/form_table.html
@@ -12,7 +12,7 @@
  <label for="name">ชื่อ -นามสกุล:</label>&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="text" name="name" id="name">
  <br><br>
- <label for="passwd">รหัสผ่าน:</label><br>
+ <label for="passwd">รหัสผ่าน:</label>&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="password" name="passwd" id="passwd">
  <br><br>
  <label for="sex">เพศ:</label><br>
