--- a/lab02/form_table.html
+++ b/lab02/form_table.html
@@ -12,10 +12,10 @@
  <label for="name">ชื่อ -นามสกุล:</label>&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="text" name="name" id="name">
  <br><br>
- <label for="passwd">รหัสผ่าน:</label>&nbsp;&nbsp;&nbsp;&nbsp;
+ <label for="passwd">รหัสผ่าน:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="password" name="passwd" id="passwd">
  <br><br>
- <label for="sex">เพศ:</label><br>
+ <label for="sex">เพศ:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <input type="radio" name="sex" id="sex" value="M">ชาย
  <input type="radio" name="sex" id="sex" value="F">หญิง
  <br><br>
