--- a/lab02/form.html
+++ b/lab02/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<center>
+
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
  <h3>Form Demo</h3>
  <form method="POST" action="https://angsila.cs.buu.ac.th/~wittawas/632/88726059/lab02/afile.php">
- <label for="name">ชื่อ -นามสกุล:</label><br>
+ <table><label for="name">ชื่อ -นามสกุล:</label><br>
  <input type="text" name="name" id="name">
  <br><br>
  <label for="passwd">รหัสผ่าน:</label><br>
@@ -37,7 +37,8 @@
  <br><br>
  <input type="submit" value="Send">
  <input type="reset" value="Clear">
+</table>
  </form>
 </body>
-</center>
+
 </html>
