--- a/lab02/form_reserve.html
+++ b/lab02/form_reserve.html
@@ -17,4 +17,12 @@
             <option value="Duluxe">Duluxe</option>
             </select>
         </td>
+        <td><label for="roomtype">Room Type:</label></td>
+        <td><select name="roomtype">
+            <option value="0">Please Select</option>
+            <option value="Standard ">Standard</option>
+            <option value="Luxury">Luxury</option>
+            <option value="Duluxe">Duluxe</option>
+            </select>
+        </td>
     </table>
