--- a/lab02/form_reserve.html
+++ b/lab02/form_reserve.html
@@ -9,6 +9,7 @@
  <h3>Hotel Booking</h3>
  <form method="POST" action="https://angsila.cs.buu.ac.th/~wittawas/632/88726059/lab02/afile.php">
     <table>
+        <tr>
         <td><label for="roomtype">Room Type:</label></td>
         <td><select name="roomtype">
             <option value="0">Please Select</option>
@@ -17,4 +18,21 @@
             <option value="Duluxe">Duluxe</option>
             </select>
         </td>
+        </tr>
+        <tr>
+            <td><label for="numguest">Number of Guesis:</label></td>
+            <td><select name="numguest">
+                <option value="0">Please Select</option>
+                <option value="1-2 ">1-2</option>
+                <option value="3-4">3-4</option>
+                <option value="5-6">5-6</option>
+                <option value="7-8">7-8</option>
+                </select>
+            </td>
+        </tr>
+        <tr>
+            <td><label for="fame">ชื่อ -นามสกุล:</label></td>
+            <td><input type="text" name="fame" id="fame"></td>
+            
+        </tr>
     </table>
