--- a/hw 03/cal.html
+++ b/hw 03/cal.html
@@ -1,3 +1,9 @@
 </br>
 </br>
 <input type="text" id="x" placeholder="num1">
+<select name="Ope" id="Ope">
+    <option value="add">+</option>
+    <option value="sub">-</option>
+    <option value="mul">x</option>
+    <option value="divi">/</option>
+</select>
