--- a/hw 03/cal.html
+++ b/hw 03/cal.html
@@ -7,3 +7,7 @@
     <option value="mul">x</option>
     <option value="divi">/</option>
 </select>
+<input type="text" id="y" placeholder="num2"> 
+<button onclick="cal()">=</button>
+<div id="result"></div>
+
