--- a/hw 03/sum.html
+++ b/hw 03/sum.html
@@ -2,3 +2,5 @@
 </br>
 <input type="text" id="a" placeholder="num1">
 <input type="text" id="b" placeholder="num2"> 
+<button onclick="sum()">Summary</button>
+<div id="result"></div>
